kubernetes/online/shields/shieldsk8s/shieldsk8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shieldsk8s
  namespace: online
spec:
  selector:
    matchLabels:
      app: shieldsk8s
  template:
    metadata:
      labels:
        app: shieldsk8s
    spec:
      serviceAccountName: shieldsk8s
      restartPolicy: Always
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.6.90
      containers:
        - name: shieldsk8s
          ports:
          - containerPort: 44444
          image: "python"
          command:
            - sh
          args:
            - "-c"
            - |
              [...]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shieldsk8s
  name: shieldsk8s
  namespace: online
spec:
  ports:
  - name: http
    targetPort: 44444
    port: 80
  selector:
    app: shieldsk8s
  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shieldsk8s-non-tls
  namespace: online
  labels:
    expose: "online"
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`shieldsk8s.la1r.com`)
    kind: Rule
    services:
    - name: shieldsk8s
      port: 80
    middlewares:
    - name: online-ratelimit
      namespace: online
    - name: http-redirect-to-https
      namespace: online
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shieldsk8s-tls
  namespace: online
  labels:
    expose: "online"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`shieldsk8s.la1r.com`)
    kind: Rule
    services:
    - name: shieldsk8s
      port: 80
    middlewares:
    - name: online-ratelimit
      namespace: online
  tls:
    certResolver: default
